--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import-normalize;
+
 body {
   background-color: #1d1d1d;
   font-family: 'Roboto', sans-serif;
@@ -33,6 +33,7 @@ h6{
   color: #fff;
   font-size: .8em;
   width: 100%;
+  padding-right: 1em;
 }
 
 .playlist-table td, .playlist-table th {
